Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131443

QPdfView mouseEvents don’t have correct position when scrolled

XMLWordPrintable

    • Windows
    • d7d9b7b94 (dev), 6f725fc9d (6.10), 9e948e957 (6.8)

      When the QPdfView is zoomed so that it needs scrollbars and area is scolled away from (0,0) the mouseMoveEvent and mouseReleaseEvents have incorrect position. Because of this links in the pdf file can’t be clicked.

      The issue can be reproduced using the qtwebengine\examples\pdfwidgets\pdfviewer example and the attached pdf file.

       

      Steps to reproduce:

      • Launch attached example QTBUG-131443.zip
      • Click the “Jump to page 2” link on the first page
      • Note: Jumps to page 2
      • Scroll the second page up so that the “Jump to page 1” is still visible
      • Click the “Jump to page 1” link on the second page
      • EXPECTED: Jumps to page 1
      • ACTUAL: The “Jump to page 1” link is not workingQTBUG-131443.zip

        1. links.pdf
          27 kB
          Titta Heikkala
        2. QTBUG-131443.zip
          23 kB
          Titta Heikkala
        For Gerrit Dashboard: QTBUG-131443
        # Subject Branch Project Status CR V

            spouke Sakaria Pouke
            tiheikka Titta Heikkala
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change