Consider viewport coordinates for mouse events

Fixes: QTBUG-131443
Pick-to: 6.8
Change-Id: I483be0d0ed6002ab334d4992169c66d086551841
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit d7d9b7b94b0ca1e8d79414e9161fe0da468eaa35)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>